azure-vote-all-in-one-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-front
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: azure-vote-front
        image: acrrspxzo.azurecr.io/azure-vote-front:v1
        ports:
        - containerPort: 80
        resources:
          requests: { cpu: "250m" }
          limits:   { cpu: "500m"  }
        readinessProbe:
          httpGet: { path: "/", port: 80 }
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: "/", port: 80 }
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
spec:
  type: LoadBalancer
  selector:
    app: azure-vote-front
  ports:
  - port: 80
    targetPort: 80
